--- a/src/AppBody.css
+++ b/src/AppBody.css
@@ -1,5 +1,6 @@
 .skills-container {
     width: 95%;
+    height: 50em;
     border-radius: 10px;
     background-color: white;
     margin: 6rem auto;
