Updated project cards with actual data instead of dummy data

--- a/src/AppBody.css
+++ b/src/AppBody.css
@@ -3,7 +3,7 @@
     min-height: 50em;
     border-radius: 10px;
     background-color: white;
-    margin: 6rem auto;
+    margin: 6rem auto 3rem auto;
     border: solid #d7dbde 1px;
     display: flex;
     flex-wrap: wrap;
